--- a/Cesium.html
+++ b/Cesium.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
+  
   <meta charset="utf-8">
+
   <meta name="description" content="" />
   <meta name="author" content="" />
   <title>Gelanggang Inovasi & Kreativitas</title>
@@ -16,18 +18,44 @@
   <link href="css/styles.css" rel="stylesheet" />
 
   <!-- Include the CesiumJS JavaScript and CSS files -->
+
   <script src="https://cesium.com/downloads/cesiumjs/releases/1.112/Build/Cesium/Cesium.js"></script>
+
   <link href="https://cesium.com/downloads/cesiumjs/releases/1.112/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
+  <script src = "https://sandcastle.cesium.com/Sandcastle-header.js"></script>
+  
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet" />
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet" />
 
   <style>
     /* CSS untuk mengatur ukuran Cesium Viewer */
     #cesiumContainer {
-      width: 100%;
-      height: 90vh;
-      margin-top: 70px;
-      border: 2px solid #004A74;
+      width: 100%; /* Set lebar ke 80% dari viewport */
+      height: 90vh; /* Set tinggi ke 60% dari tinggi viewport */
+      margin-top: 70px; /* Untuk menempatkan di tengah horizontal */
+      border: 2px solid #004A74; /* Opsional: Tambahkan border untuk kejelasan */
     }
   </style>
+
+
+  <style type="text/css">
+    #toggle-fpv { z-index: 1; position: fixed; top: 100px; left: 15px; }
+  </style>
+
+
+
+
 </head>
 
 <body>
@@ -37,6 +65,9 @@
         <img src="assets/img/bw_ugm.png" alt="Logo UGM" style="height: 40px; margin-right: 5px;">
         <span>Gelanggang Inovasi & Kreativitas</span>
       </a>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+  
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a href="index.html#about">Tentang</a></li>
@@ -46,47 +77,57 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
+      <!-- .navbar -->
+  
       <a href="index.html" class="get-started-btn">Kembali ke Beranda</a>
     </div>
   </header>
+  
 
-  <div id="cesiumContainer"></div>
-
+  <div id="cesiumContainer" ></div>
+  <button id="toggle-fpv" >W untuk Maju <br> S untuk Mundur <br> A untuk Kiri <br>D untuk Kanan <br>Q untuk Atas/Naik <br>E untuk Bawah/Turun <br></button>
   <script type="module">
-    // Replace with your Cesium ion asset IDs
-    const buildingID = 2926989;
 
-    // Your Cesium ion access token
+     // Replace number below with buildingID of your uploaded model on cesium ion at: https://ion.cesium.com/assets
+     const buildingID=  2926989;
+
+    // Your access token can be found at: https://ion.cesium.com/tokens.
+    // Replace `your_access_token` with your Cesium ion access token.
+
     Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiIwNThmYTc3YS03ZjNhLTQ1MmItODgzMy1kYzVmZTBhZjQ5YjIiLCJpZCI6MTgxNzEyLCJpYXQiOjE3MzM3NjI5OTB9.vIavBAuUCLopvbY_aYKs-cpKl-zrjfzL5PlO6UsrQgM';
 
-    // Initialize the Cesium Viewer
+    // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
     const viewer = new Cesium.Viewer('cesiumContainer', {
       terrain: Cesium.Terrain.fromWorldTerrain(),
-    });
+    });    
 
-    // Add the 3D Tileset
+    // Add the 3D Tileset you created from your Cesium ion account.
     const newBuildingTileset = await Cesium.Cesium3DTileset.fromIonAssetId(buildingID);
     viewer.scene.primitives.add(newBuildingTileset);
 
-    // Add additional terrain or layers if needed
+    // Initialize viewer with terrain
     const tileset = viewer.scene.primitives.add(
-      await Cesium.Cesium3DTileset.fromIonAssetId(2918417)
-    );
+  await Cesium.Cesium3DTileset.fromIonAssetId(2918417),
+);
 
-    // Fly the camera to the specific location
+    // Fly the camera to Denver, Colorado at the given longitude, latitude, and height.
     viewer.camera.flyTo({
-      destination: Cesium.Cartesian3.fromDegrees(110.375998, -7.775966, 185),
-      orientation: {
-        heading: Cesium.Math.toRadians(0),
-        pitch: Cesium.Math.toRadians(-30),
-        roll: 0
-      },
-      duration: 3
+    destination: Cesium.Cartesian3.fromDegrees( 110.375998,-7.775966,  185),
+    orientation: {
+        heading: Cesium.Math.toRadians(0), // Angle of rotation around the vertical axis (eastward)
+        pitch: Cesium.Math.toRadians(0), // Angle from the horizon (downward)
+        roll: 0 // Rotation around the camera's direction axis
+    },
+    duration: 3 // Optional: Fly to the destination in 3 seconds
     });
 
-    // Enable default navigation controls (mouse and scroll-based)
-    // No additional modifications needed since default Cesium navigation is enabled
-  </script>
+  
+
+      
+      </script>
+
+    </div>
+
 </body>
 
 </html>
