--- a/Cesium.html
+++ b/Cesium.html
@@ -111,9 +111,9 @@
 
     // Fly the camera to Denver, Colorado at the given longitude, latitude, and height.
     viewer.camera.flyTo({
-    destination: Cesium.Cartesian3.fromDegrees( 110.375998,-7.775966,  185),
+    destination: Cesium.Cartesian3.fromDegrees(  110.37566830987247,-7.777038007636085,  250),
     orientation: {
-        heading: Cesium.Math.toRadians(0), // Angle of rotation around the vertical axis (eastward)
+        heading: Cesium.Math.toRadians(-5), // Angle of rotation around the vertical axis (eastward)
         pitch: Cesium.Math.toRadians(0), // Angle from the horizon (downward)
         roll: 0 // Rotation around the camera's direction axis
     },
