--- a/Cesium.html
+++ b/Cesium.html
@@ -112,7 +112,7 @@
 
     // Fly the camera to Denver, Colorado at the given longitude, latitude, and height.
     viewer.camera.flyTo({
-    destination: Cesium.Cartesian3.fromDegrees(  110.37566830987247,-7.777038007636085,  300),
+    destination: Cesium.Cartesian3.fromDegrees(   110.375650, -7.777739,  300),
     orientation: {
         heading: Cesium.Math.toRadians(0), // Angle of rotation around the vertical axis (eastward)
         pitch: Cesium.Math.toRadians(-15), // Angle from the horizon (downward)
