--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <span>21/482082/TK/53215</span>
             <p>Teknik Geodesi</p>
             <div class="social">
-              <a href="https://www.instagram.com/aisyaanrhm">More</a>
+              <a href="https://www.instagram.com/aisyaaanrr">More</a>
             </div>
           </div>
         </div>
