--- a/Cesium.html
+++ b/Cesium.html
@@ -71,10 +71,10 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="active" href="index.html">Beranda</a></li>
-          <li><a href="#about">Tentang</a></li>
-          <li><a href="#basemap">Data</a></li>
-          <li><a href="#workspace">Tahapan</a></li>
-          <li><a href="#ourteam">Tim Kami</a></li>
+          <li><a href="index.html#about">Tentang</a></li>
+          <li><a href="index.html#basemap">Data</a></li>
+          <li><a href="index.html#workspace">Tahapan</a></li>
+          <li><a href="index.html#ourteam">Tim Kami</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
