--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
                 <div class="course-content">
                   <div class="d-flex justify-content-between align-items-center mb-3"></div>
 
-                  <h3>Light Detection and Ranging</h3>
+                  <h3>Point Cloud LiDAR</h3>
 
                   <div class="trainer d-flex justify-content-between align-items-center">
                     <div class="trainer-profile d-flex align-items-center">
                       
-                      <span>LiDAR</span>
+                      <span>Data <i>point cloud</i> sebagai dasar pembuatan model 3D Gedung GIK</span>
                     </div>
                   </div>
                 </div>
@@ -198,7 +198,7 @@
                   <div class="trainer d-flex justify-content-between align-items-center">
                     <div class="trainer-profile d-flex align-items-center">
                       
-                      <span>DTM</span>
+                      <span>Ground Surface dibuat dari data <i>point cloud</i> LiDAR yang telah dilakukan <i>filtering</i></span>
                     </div>
                   </div>
                 </div>
