--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex justify-content-center align-items-center">
       <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-        <h1>Model 3D Bangunan Gelanggang Inovasi 
-          & Kreativitas</h1>
+        <h1>Model 3D Bangunan Gelanggang Inovasi & Kreativitas</h1>
         <h3 style="color: #004A74; font-size: 35px; "><b>Universitas Gadjah Mada</b></h3>
         <a href="Cesium.html" class="get-started-btn" style="color: #ffffff">Lihat Model 3D</a>
       </div>
